--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,18 @@
 ---
 
 @import "{{ site.theme }}";
-.profile_image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.container {
+        display: flex;
+        align-items: center;
+        justify-content: center
+      }
+img {
+  max-width: 100%
+}
+.image {
+  flex-basis: 40%
+}
+.text {
+  font-size: 20px;
+  padding-left: 20px;
 }
